--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/normalize.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="/assets/js/main.js"></script>
 </head>
 <body>
-    
+        <header id="tags">
+            <!-- here goes the search parameters -->
+        </header>
+        <hr>
+        <div id="display1">
+
+        </div>
+        <form>
+            <input type="search" name="newTag" id="newTag">
+            <input type="submit" value="submit" id="submit">
+        </form>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
