data from api stuck and unwriteable

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         </div>
         <form>
-            <input type="search" name="newTag" id="newTag">
+            <input type="text" name="newTag" id="newTag">
             <input type="submit" value="submit" id="submit">
         </form>
     <script src="assets/js/main.js"></script>
