some style, some mobile responsiveness, play/pause works, save feature pseudo coded in js

--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 <body>
+        <h1>Select a tag to search Giphy for top 10 gifs</h1>
         <header id="tags">
             <!-- here goes the search parameters -->
         </header>
-        <hr>
-        <div id="display1">
-
-        </div>
-        <form>
+        
+        <form id="inputForm">
+            <h2>Add a search tag here!</h2>
             <input type="text" name="newTag" id="newTag">
             <input type="submit" value="submit" id="submit">
         </form>
+        <div id="display1">
+
+        </div>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
